--- a/css/hugo-easy-gallery.css
+++ b/css/hugo-easy-gallery.css
@@ -164,4 +164,15 @@ figcaption p {
 
 figcaption{
     background: rgba(255, 255, 255, 0.5);
+
+}
+
+figure figcaption{
+    padding: 0.2em;
+    color: #8b8b8b;
+    text-align: center;
+    font-weight: 400;
+    /* font-style: italic; */
+    font-size: 90%;  /*change this if you want bigger text */
+    background: rgba(255, 255, 255, 0.5);
 }
