--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-
 @charset "UTF-8";
-/* your styles go here */
 /*
 Theme Name: Tracks
 Theme URI: https://www.competethemes.com/tracks/
@@ -70,7 +68,7 @@ body {
   font-family: "raleway", sans-serif;
   line-height: 1.5;
   color: #4d4d4d;
-  background: #222;
+  background: #2f3138;
   -webkit-font-smoothing: antialiased;
   word-wrap: break-word;
   -ms-word-wrap: break-word;
@@ -84,7 +82,9 @@ body {
 }
 
 .main {
-  background: #222;
+  /* 110 800 to #2f3138 */
+  /* 38312f  to #2f3138 */
+  background: #2f3138;
   padding-bottom: 1.5em;
   margin: 0 auto;
 }
@@ -102,18 +102,23 @@ p {
   margin: 1.5em 0;
 }
 
-a {
+article p a{
   text-decoration: none;
-  color: #222;
+  color: #2f3138;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
-a:link {
-  color: #505a81;
+article p a:link {
+  color: #606783;
 }
-a:visited, a:hover, a:active, a:focus {
+article p a:visited,
+article p a:hover,
+article p a:active,
+article p a:focus {
   color: black;
+
 }
+
 
 article a {
   text-decoration: underline;
@@ -199,7 +204,7 @@ code {
 blockquote {
   margin: 1.5em 0;
   padding: 0 1.5em;
-  border-left: solid 0.75em #222;
+  border-left: solid 0.75em #2f3138;
 }
 blockquote cite {
   display: block;
@@ -286,6 +291,11 @@ img {
   max-width: 100%;
 }
 
+article img {
+  max-height: 100%;
+  max-width: 100%;
+}
+
 .wp-caption-text {
   margin: 0;
   color: #8c8c8c;
@@ -327,7 +337,7 @@ textarea {
 }
 
 input[type="submit"] {
-  background: #222;
+  background: #2f3138;
   color: white;
   max-width: 22.2em;
   min-width: 11.1em;
@@ -377,7 +387,7 @@ a img {
 .skip-content {
   position: absolute;
   width: 100%;
-  background: #111;
+  background: #2f3138;
   color: #aaaaaa;
   text-align: center;
   padding: 0.375em;
@@ -467,6 +477,9 @@ a img {
   -webkit-transition: opacity 0.2s ease;
           transition: opacity 0.2s ease;
 }
+.site-description{
+  color:rgba(83, 83, 83, 0.1);
+}
 .site-title span {
   opacity: 0;
   position: absolute;
@@ -474,17 +487,30 @@ a img {
 }
 .site-title a {
   color: white;
+
 }
-.site-title a:link, .site-title a:visited, .site-title a:hover, .site-title a:active, .site-title a:focus {
+.site-title a:link, .site-title a:visited, .site-title a:hover, .site-title a:active, .site-title a:focus{
   color: white;
+}
+.site-description a,
+.site-description a:visited,
+.site-description a:hover,
+.site-description a:active,
+.site-description a:focus{
+  color: rgba(255,255,255,1);
 }
 .site-title img {
   max-width: 5em;
   max-height: 1.5em;
 }
-.site-title:hover, .site-title:active, .site-title:focus {
+.site-title:hover, .site-title:active, .site-title:focus{
   opacity: 1;
 }
+/* .site-description a:hover,
+.site-description a:active,
+.site-description a:focus{
+  color: #fff;
+} */
 
 .toggle-navigation {
   position: relative;
@@ -518,8 +544,8 @@ a img {
   height: 100%;
   width: 100%;
   z-index: 19;
-  background-image: -webkit-linear-gradient(#222 26px, transparent 24px, transparent 24px);
-  background-image: linear-gradient(#222 26px, transparent 24px, transparent 24px);
+  background-image: -webkit-linear-gradient(#2f3138 26px, transparent 24px, transparent 24px);
+  background-image: linear-gradient(#2f3138 26px, transparent 24px, transparent 24px);
   background-size: 1px 48px;
   /* this is a 24px baseline grid */
   text-align: center;
@@ -617,7 +643,7 @@ a img {
     position: relative;
     z-index: 2;
     padding: 1.5em 5.55% 2.25em;
-    border-top: solid 0.75em #111;
+    border-top: solid 0.75em #2f3138;
   }
 
   .title-info {
@@ -646,7 +672,7 @@ a img {
   .menu-primary .site-description, .menu-primary-tracks .site-description {
     position: absolute;
     left: 0;
-    opacity: 0.6;
+    opacity: 1;
   }
   .menu-primary .site-description + div, .menu-primary-tracks .site-description + div {
     margin-bottom: 0.75em;
@@ -718,7 +744,7 @@ a img {
     min-width: 100%;
     max-width: 220px;
     margin: 0 auto;
-    background: #111;
+    background: #2f3138;
     text-align: center;
     -webkit-transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
             transition: opacity 0.3s ease, transform 0.3s ease;
@@ -825,7 +851,7 @@ a img {
   color: #aaaaaa;
 }
 .excerpt-meta a:hover, .entry-meta a:hover, .excerpt-meta a:active, .entry-meta a:active, .excerpt-meta a:focus, .entry-meta a:focus {
-  color: #222;
+  color: #2f3138;
 }
 
 .excerpt-title, .entry-title {
@@ -841,7 +867,7 @@ a img {
   color: #4d4d4d;
 }
 .excerpt-title a:hover, .entry-title a:hover, .excerpt-title a:active, .entry-title a:active, .excerpt-title a:focus, .entry-title a:focus {
-  color: #222;
+  color: #2f3138;
 }
 
 .excerpt-header, .entry-header {
@@ -873,7 +899,7 @@ a img {
   color: #4d4d4d;
 }
 .more-link:hover, .more-link:active, .more-link:focus {
-  color: #222;
+  color: #2f3138;
 }
 .more-link:hover:after, .more-link:active:after, .more-link:focus:after {
   -webkit-transform: scaleX(1);
@@ -922,7 +948,7 @@ a img {
 /* 600 */
 @media all and (min-width: 37.5em) {
   .excerpt {
-    background: #111;
+    background: #2f3138;
     margin-bottom: 1.5em;
   }
   .excerpt:first-child {
@@ -1086,7 +1112,7 @@ a img {
 }
 
 .author-meta {
-  background: #222;
+  background: #2f3138;
   color: white;
   padding: 1.5em;
   margin: 3em 0 0;
@@ -1199,7 +1225,7 @@ a img {
   .entry .featured-image:after {
     position: absolute;
     content: '';
-    background: #222;
+    background: #2f3138;
     top: 0;
     bottom: 0;
     left: 0;
@@ -1332,7 +1358,7 @@ li.pingback:first-child {
   color: #4d4d4d;
 }
 .comment-author .author-name a:hover, .comment-author .author-name a:active, .comment-author .author-name a:focus {
-  color: #222;
+  color: #2f3138;
 }
 .comment-author:after {
   content: ".";
@@ -1515,7 +1541,7 @@ li.pingback:first-child {
 }
 
 .design-credit {
-  background: #111;
+  background: #2f3138;
   color: #8c8c8c;
   padding: 0.75em 0;
   margin-top: 48px;
@@ -1879,7 +1905,7 @@ li.pingback:first-child {
   left: -6%;
   width: 112%;
   min-height: 3em;
-  background: #111;
+  background: #2f3138;
   padding: 0.375em 5.55%;
   margin: -0.75em 0 0;
   line-height: 0;
@@ -1952,7 +1978,7 @@ li.pingback:first-child {
   left: 0;
   padding: 1.5em;
   margin: 0;
-  background: #111;
+  background: #2f3138;
   -webkit-transition: all 0.3s ease;
           transition: all 0.3s ease;
 }
@@ -2029,7 +2055,7 @@ li.pingback:first-child {
     right: -70%;
     max-width: 200px;
     opacity: 0;
-    background: #111;
+    background: #2f3138;
     text-align: center;
     -webkit-transform: scale(0.95);
             transform: scale(0.95);
@@ -2092,7 +2118,7 @@ li.pingback:first-child {
   height: 100%;
   float: right;
   border: none;
-  background: #111;
+  background: #211810;
   font-size: 1em;
   padding: 0.75em;
   margin: 0 -12px 0 0;
@@ -2226,6 +2252,21 @@ li.pingback:first-child {
     margin-right: 0px !important;
   }
 }
+
+/**
+ * RSS Feed button on Categories & Tags
+ */
+.in-page-rss {
+   color: white !important;
+   opacity: 0.4;
+}
+
+.in-page-rss:hover {
+  color: white !important;
+  opacity: 1;
+}
+
+
 /**
  * 14.2 Galleries
  */
@@ -2311,28 +2352,28 @@ li.pingback:first-child {
   /* Search Icon */
 }
 .dark-header .site-title a {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .site-title a:link, .dark-header .site-title a:visited, .dark-header .site-title a:hover, .dark-header .site-title a:active, .dark-header .site-title a:focus {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .toggle-navigation {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .site-header .site-description {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .site-header .social-media-icons a {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .site-header .social-media-icons a:link, .dark-header .site-header .social-media-icons a:visited {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .site-header .social-media-icons a:hover, .dark-header .site-header .social-media-icons a:active, .dark-header .site-header .social-media-icons a:focus {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .toggle-secondary-navigation {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .menu-secondary-items a,
 .dark-header .menu-secondary-items a:link,
@@ -2340,10 +2381,10 @@ li.pingback:first-child {
 .dark-header .menu-secondary-items a:hover,
 .dark-header .menu-secondary-items a:active,
 .dark-header .menu-secondary-items a:focus {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .site-header .search-form-container i {
-  color: #222;
+  color: #2f3138;
 }
 .dark-header .site-header.toggled .site-title a {
   color: white;
@@ -2361,7 +2402,7 @@ li.pingback:first-child {
 /* 600px */
 @media all and (min-width: 37.5em) {
   .dark-header .menu-secondary-items:before {
-    color: #222;
+    color: #2f3138;
   }
   .dark-header .menu-secondary-items ul {
     background: white;
@@ -2371,16 +2412,16 @@ li.pingback:first-child {
 @media all and (min-width: 50em) {
   .dark-header .menu-unset > ul a,
   .dark-header .menu-primary-items a {
-    color: #222;
+    color: #2f3138;
   }
   .dark-header .menu-unset > ul a:link, .dark-header .menu-unset > ul a:visited,
   .dark-header .menu-primary-items a:link,
   .dark-header .menu-primary-items a:visited {
-    color: #222;
+    color: #2f3138;
   }
   .dark-header .menu-unset > ul > li:after,
   .dark-header .menu-primary-items > li:after {
-    color: #222;
+    color: #2f3138;
   }
   .dark-header .menu-unset > ul ul,
   .dark-header .menu-primary-items ul {
@@ -2414,7 +2455,7 @@ li.pingback:first-child {
   background: rgba(255, 255, 255, 0.2);
 }
 .background-image-active .site-footer {
-  background: #222;
+  background: #2f3138;
 }
 
 /* background style textures */
@@ -2428,7 +2469,7 @@ li.pingback:first-child {
   border-color: transparent;
 }
 .background-texture-active .site-footer {
-  background: #222;
+  background: #2f3138;
 }
 .background-texture-active .top-navigation {
   background: rgba(255, 255, 255, 0.2);
@@ -2606,42 +2647,6 @@ li.pingback:first-child {
   max-width: 1280px;
 }
 
-/* 600px */
-@media all and (min-width: 37.5em) {
-  #disqus_thread {
-    width: 88.88%;
-    margin: 0 auto;
-  }
-}
-/* 700px */
-@media all and (min-width: 43.75em) {
-  #disqus_thread {
-    padding: 1.5em 10%;
-  }
-}
-/* 900px */
-@media all and (min-width: 56.25em) {
-  #disqus_thread {
-    padding: 1.5em 14.66%;
-  }
-}
-/* 1100px */
-@media all and (min-width: 68.75em) {
-  #disqus_thread {
-    padding: 1.5em 17.435% 3em;
-  }
-}
-/* 1200px */
-@media all and (min-width: 75em) {
-  #disqus_thread {
-    padding: 1.5em 19.75% 3em;
-  }
-}
-@media all and (min-width: 1400px) {
-  #disqus_thread {
-    padding: 1.5em 20px 3em;
-  }
-}
 /* bbpress Styles */
 .bbpress.archive .main {
   width: 100%;
@@ -2662,7 +2667,7 @@ li.pingback:first-child {
 }
 #wp-bbp_topic_content-editor-container textarea,
 #wp-bbp_reply_content-editor-container textarea {
-  outline: solid 1px #222;
+  outline: solid 1px #2f3138;
   margin-top: 1.5em !important;
 }
 
@@ -2676,7 +2681,7 @@ li.pingback:first-child {
 }
 
 .bbp-submit-wrapper button {
-  background: #222;
+  background: #2f3138;
   color: white;
   max-width: 22.2em !important;
   min-width: 11.1em;
@@ -2711,14 +2716,7 @@ li.pingback:first-child {
     width: 500px !important;
   }
 }
-/*
 
-ATTENTION:
-
-Please do not edit this. Your changes will be overwritten when you update Tracks.
-
-If you want to make CSS edits, use the "Custom CSS" section in the Customizer instead (Appearance > Customize).
-
-If you want more information about customizing Tracks with CSS, check out this guide: https://www.competethemes.com/help/custom-css-tracks/
-
-*/
+.box figure{
+  margin:0;
+}
